--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"serve": "cross-env PORT=25569 node build",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"deploy": "npm run build && npx gh-pages -d build"
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -18,7 +16,6 @@
 		"@sveltejs/adapter-cloudflare": "^2.0.2",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
-		"gh-pages": "^5.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
@@ -26,7 +23,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.2.0",
-		"cross-env": "^7.0.3"
+		"@sveltejs/adapter-node": "^1.2.0"
 	}
 }
